Clean up some nullability and update syntax